--- a/IOSModelBay/Views&Controllers/Notice/Views/MB_MessageTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Notice/Views/MB_MessageTableViewCell.xib
@@ -39,7 +39,7 @@
                         <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message:cxzcxzczxczx\ndfdsf" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKJ-bU-QLx">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message:cxzcxzczxczx\ndfdsf" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKJ-bU-QLx">
                         <rect key="frame" x="56" y="34" width="160" height="14"/>
                         <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="11"/>
                         <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
@@ -51,8 +51,8 @@
                         <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="message" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kR-jP-Zqb">
-                        <rect key="frame" x="126" y="12" width="49" height="13"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kR-jP-Zqb">
+                        <rect key="frame" x="127" y="12" width="49" height="13"/>
                         <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="13"/>
                         <color key="textColor" red="1" green="0.30980392156862746" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -63,7 +63,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Lex-hO-i2h" secondAttribute="trailing" constant="8" id="1C7-ZF-lUT"/>
-                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="oKJ-bU-QLx" secondAttribute="bottom" constant="12" id="3Rs-h8-trn"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="oKJ-bU-QLx" secondAttribute="bottom" constant="5" id="3Rs-h8-trn"/>
                     <constraint firstItem="SM6-xb-lnM" firstAttribute="top" secondItem="GQL-oa-Fkp" secondAttribute="top" id="C3e-N0-HcA"/>
                     <constraint firstItem="Lex-hO-i2h" firstAttribute="centerY" secondItem="GQL-oa-Fkp" secondAttribute="centerY" id="E8g-Ji-Txo"/>
                     <constraint firstItem="Lex-hO-i2h" firstAttribute="leading" secondItem="c5d-tx-PZV" secondAttribute="trailing" constant="5" id="K0o-1E-JlS"/>
@@ -88,6 +88,7 @@
             <connections>
                 <outlet property="messageLabel" destination="oKJ-bU-QLx" id="vi6-Mi-4bx"/>
                 <outlet property="timeLabel" destination="Lex-hO-i2h" id="1Pn-aG-Zlc"/>
+                <outlet property="typeLabel" destination="5kR-jP-Zqb" id="5rC-Uf-oZw"/>
                 <outlet property="userImageView" destination="SM6-xb-lnM" id="Kbb-0U-ph6"/>
                 <outlet property="usernameLabel" destination="GQL-oa-Fkp" id="tPp-Uf-36X"/>
             </connections>
