--- a/IOSModelBay/Views&Controllers/Notice/Views/MB_NoticeTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Notice/Views/MB_NoticeTableViewCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="FUTURASTD-BOOK.OTF">
@@ -17,14 +18,15 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MB_NoticeTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="77"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="b3m-sH-4hy">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b3m-sH-4hy">
                         <rect key="frame" x="12" y="12" width="44" height="44"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="44" id="Alg-Sm-A3U"/>
                             <constraint firstAttribute="height" constant="44" id="b9Y-LI-AWA"/>
@@ -36,32 +38,34 @@
                         <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sadnasmndsndmasnd" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h5c-e3-pYa">
-                        <rect key="frame" x="68" y="34" width="187" height="13.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sadnasmndsndmasnd" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h5c-e3-pYa">
+                        <rect key="frame" x="68" y="34" width="187" height="14"/>
                         <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="11"/>
                         <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_time" translatesAutoresizingMaskIntoConstraints="NO" id="hHX-Lz-ROY">
-                        <rect key="frame" x="68" y="54" width="11" height="11"/>
+                        <rect key="frame" x="68" y="55" width="11" height="11"/>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="k6p-Z6-VXx">
-                        <rect key="frame" x="255" y="3" width="62" height="62"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="22n-sS-jEa">
+                        <rect key="frame" x="82" y="54" width="13" height="14"/>
+                        <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="11"/>
+                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k6p-Z6-VXx">
+                        <rect key="frame" x="255" y="7" width="62" height="62"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="iQu-cf-cHx"/>
                             <constraint firstAttribute="height" constant="62" id="qxQ-LU-rtc"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="22n-sS-jEa">
-                        <rect key="frame" x="82" y="53" width="13" height="13.5"/>
-                        <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="11"/>
-                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="hHX-Lz-ROY" firstAttribute="leading" secondItem="h5c-e3-pYa" secondAttribute="leading" id="34B-ya-zj2"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="b3m-sH-4hy" secondAttribute="bottom" id="99A-Rk-yMP"/>
                     <constraint firstItem="b3m-sH-4hy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="AHF-xA-jSI"/>
                     <constraint firstItem="b3m-sH-4hy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="KDX-to-vRk"/>
                     <constraint firstItem="hHX-Lz-ROY" firstAttribute="top" secondItem="h5c-e3-pYa" secondAttribute="bottom" constant="7" id="TwS-e5-ezd"/>
@@ -72,10 +76,17 @@
                     <constraint firstItem="h5c-e3-pYa" firstAttribute="top" secondItem="EF9-tS-QYF" secondAttribute="bottom" constant="9" id="nge-zU-kjl"/>
                     <constraint firstItem="22n-sS-jEa" firstAttribute="leading" secondItem="hHX-Lz-ROY" secondAttribute="trailing" constant="3" id="oHA-PW-csz"/>
                     <constraint firstItem="hHX-Lz-ROY" firstAttribute="leading" secondItem="EF9-tS-QYF" secondAttribute="leading" id="qbs-aD-jtZ"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="22n-sS-jEa" secondAttribute="bottom" constant="5" id="qsS-2K-zyh"/>
                     <constraint firstItem="hHX-Lz-ROY" firstAttribute="centerY" secondItem="22n-sS-jEa" secondAttribute="centerY" id="uws-RL-udR"/>
                     <constraint firstItem="k6p-Z6-VXx" firstAttribute="leading" secondItem="EF9-tS-QYF" secondAttribute="trailing" id="wih-0s-JO1"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="22n-sS-jEa" secondAttribute="bottom" id="y8v-W7-npp"/>
                     <constraint firstAttribute="centerY" secondItem="k6p-Z6-VXx" secondAttribute="centerY" id="yFe-DA-826"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="y8v-W7-npp"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentLabel" destination="h5c-e3-pYa" id="kL1-gt-A0F"/>
@@ -87,7 +98,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="a.png" width="30" height="30"/>
         <image name="ic_time" width="11" height="11"/>
     </resources>
 </document>
