--- a/IOSModelBay/Views&Controllers/Profile/MB_UserInfoView.xib
+++ b/IOSModelBay/Views&Controllers/Profile/MB_UserInfoView.xib
@@ -57,12 +57,12 @@
                     </constraints>
                     <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="12"/>
                     <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <state key="normal" title="COLLECTION" image="ic_add">
+                    <state key="normal" title="COLLECTION" image="add_collection">
                         <color key="titleColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <state key="selected" title="COLLECTION">
-                        <color key="titleColor" red="1" green="0.30980392156862746" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="selected" title="COLLECTION" image="wc_collection">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2cr-fY-XbY">
@@ -125,7 +125,8 @@
     </objects>
     <resources>
         <image name="a.png" width="30" height="30"/>
-        <image name="ic_add" width="22" height="22"/>
+        <image name="add_collection" width="12" height="12"/>
+        <image name="wc_collection" width="12" height="12"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
