--- a/IOSModelBay/Views&Controllers/Regist/Views/MB_CareerCollectViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Regist/Views/MB_CareerCollectViewCell.xib
@@ -18,7 +18,7 @@
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lz2-hO-jUq">
                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Model" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLF-kk-GY1">
                         <rect key="frame" x="51" y="115" width="48" height="21"/>
