--- a/IOSModelBay/Views&Controllers/Profile/Likes/Views/MB_LikeCollectViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Likes/Views/MB_LikeCollectViewCell.xib
@@ -19,8 +19,9 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="130"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="90h-D0-koa">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="90h-D0-koa">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="90h-D0-koa" secondAttribute="height" multiplier="1:1" id="Kpl-v8-zsO"/>
                         </constraints>
@@ -50,7 +51,4 @@
             </connections>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="a.png" width="30" height="30"/>
-    </resources>
 </document>
