--- a/IOSModelBay/Views&Controllers/Profile/MB_UserInfoView.xib
+++ b/IOSModelBay/Views&Controllers/Profile/MB_UserInfoView.xib
@@ -23,15 +23,15 @@
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BcB-64-HJg">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCG-wP-EdG">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="WoQ-Lz-vR7">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WoQ-Lz-vR7">
                     <rect key="frame" x="129" y="16" width="62" height="62"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="62" id="Cwj-CR-cbh"/>
                         <constraint firstAttribute="height" constant="62" id="QXd-3D-6SG"/>
@@ -124,7 +124,6 @@
         </view>
     </objects>
     <resources>
-        <image name="a.png" width="30" height="30"/>
         <image name="add_collection" width="12" height="12"/>
         <image name="wc_collection" width="12" height="12"/>
     </resources>
