--- a/IOSModelBay/Views&Controllers/ScanAblum/Views/MB_LikersTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/ScanAblum/Views/MB_LikersTableViewCell.xib
@@ -54,6 +54,9 @@
                             <color key="titleColor" red="1" green="0.30980392156862746" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <state key="selected" image="wc_collection">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
                     </button>
                 </subviews>
                 <constraints>
@@ -85,5 +88,6 @@
     </objects>
     <resources>
         <image name="ic_add_c" width="9" height="9"/>
+        <image name="wc_collection" width="12" height="12"/>
     </resources>
 </document>
