--- a/IOSModelBay/Views&Controllers/Profile/MB_UserInfoView.xib
+++ b/IOSModelBay/Views&Controllers/Profile/MB_UserInfoView.xib
@@ -95,14 +95,14 @@
                 <constraint firstAttribute="bottom" secondItem="rCG-wP-EdG" secondAttribute="bottom" id="IfG-2C-iAG"/>
                 <constraint firstAttribute="trailing" secondItem="2cr-fY-XbY" secondAttribute="trailing" constant="32" id="S6C-te-AqZ"/>
                 <constraint firstItem="fRf-1J-0Zg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="V6J-hr-2hD"/>
-                <constraint firstAttribute="bottom" secondItem="2cr-fY-XbY" secondAttribute="bottom" constant="16" id="fCx-Z7-fSh"/>
+                <constraint firstItem="2cr-fY-XbY" firstAttribute="top" secondItem="8Ju-Ry-0tj" secondAttribute="bottom" constant="14" id="Zo8-kt-sMi"/>
+                <constraint firstItem="kTh-XV-FcM" firstAttribute="top" secondItem="8Ju-Ry-0tj" secondAttribute="bottom" constant="14" id="e7j-Y8-mxQ"/>
                 <constraint firstAttribute="trailing" secondItem="rCG-wP-EdG" secondAttribute="trailing" id="fNY-DT-Fq3"/>
                 <constraint firstAttribute="centerX" secondItem="WoQ-Lz-vR7" secondAttribute="centerX" id="gaL-rn-wKJ"/>
                 <constraint firstItem="8Ju-Ry-0tj" firstAttribute="top" secondItem="fRf-1J-0Zg" secondAttribute="bottom" constant="9" id="inm-SO-EQg"/>
                 <constraint firstItem="kTh-XV-FcM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="32" id="kCf-oT-OjS"/>
                 <constraint firstAttribute="trailing" secondItem="BcB-64-HJg" secondAttribute="trailing" id="kZs-Lh-OeI"/>
                 <constraint firstAttribute="trailing" secondItem="BcB-64-HJg" secondAttribute="trailing" id="noP-UP-UyI"/>
-                <constraint firstAttribute="bottom" secondItem="kTh-XV-FcM" secondAttribute="bottom" constant="16" id="nzl-sP-lVp"/>
                 <constraint firstItem="fRf-1J-0Zg" firstAttribute="top" secondItem="WoQ-Lz-vR7" secondAttribute="bottom" constant="13" id="o6X-Jc-iti"/>
                 <constraint firstItem="rCG-wP-EdG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="s2Q-v6-s0u"/>
                 <constraint firstAttribute="bottom" secondItem="BcB-64-HJg" secondAttribute="bottom" id="tYg-bS-Uj6"/>
@@ -115,8 +115,10 @@
             <connections>
                 <outlet property="backImageView" destination="BcB-64-HJg" id="thd-OA-B5f"/>
                 <outlet property="careerLabel" destination="8Ju-Ry-0tj" id="OM1-s1-f6e"/>
+                <outlet property="coverView" destination="rCG-wP-EdG" id="wB0-96-eeZ"/>
                 <outlet property="inviteButton" destination="2cr-fY-XbY" id="9WD-W6-WgQ"/>
                 <outlet property="likeButton" destination="kTh-XV-FcM" id="Zj5-bp-6Gd"/>
+                <outlet property="likeLeading" destination="kCf-oT-OjS" id="gSH-Lj-TDZ"/>
                 <outlet property="nameLabel" destination="fRf-1J-0Zg" id="IBv-nP-slc"/>
                 <outlet property="userImageView" destination="WoQ-Lz-vR7" id="dHt-BR-peO"/>
             </connections>
